# protein-embedder

./: README.md  pyproject.toml
src/protein_embedder/: __init__.py  embedder.py  pipeline.py  processor.py
tests/: test_pipeline.py
